--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.4.3",
