--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "normalize.css": "^7.0.0",
     "rxjs": "^5.5.2",
     "tslib": "^1.8.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
